# dspy-playground

./: .env.example  pyproject.toml  test.ipynb
configs/: index.py
prisma/: schema.prisma
scripts/: dev.py
src/: main.py  training.py
src/data/: 20240827-training.csv
src/examples/: initial.py  rag.py
